# linear-algebra

./: .gitignore  CMakeLists.txt
include/: InvalidMatrixFormat.h  InvalidMatrixFormat.hpp  Matrix.h  Matrix.hpp  MatrixOperator.hpp  MatrixView.hpp  PaddedMatrixView.hpp  ThreadPool.hpp  TransposedMatrixView.hpp
src/: InvalidMatrixFormat.cpp  Matrix.cpp  MatrixOperator.cpp  MatrixView.cpp  PaddedMatrixView.cpp  ThreadPool.cpp  TransposedMatrixView.cpp  main.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_matrixOperator.cpp  test_thread-pool.cpp
